--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-api",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "tsx watch src/server.ts",
@@ -33,7 +33,8 @@
     "socket.io": "^4.7.5",
     "sqlite3": "^5.1.7",
     "tsx": "^4.19.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
