--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@aws-sdk/client-s3": "^3.629.0",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
+    "bson": "^6.10.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
